# docker_jenkis_ci

./: .coverage  Dockerfile  Dockerfile_test  Jenkinsfile  README.md  plugins.txt  print_time.py  print_time_test.py  pyproject.toml  send_email.py
.github/workflow/: dailyreport.yml
.github/workflows/: dailyreport.yml
params/choice/: Jenkinsfile
params/func/: Jenkinsfile
params/input/: Jenkinsfile
params/launch/: Jenkinsfile
variables/: Jenkinsfile
